# RAG

./: .gitignore  pyproject.toml  requirements.txt
1-DataIngestParsing/: 1-dataIngestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
1-DataIngestParsing/data/databases/: company.db
1-DataIngestParsing/data/json_files/: company.json  events.jsonl
1-DataIngestParsing/data/structured_files/: inventory.xlsx
1-DataIngestParsing/data/text_files/: python_intro.txt
2-VectorEmbeddings/: 1-embeddings.ipynb  2-openai.ipynb
3-VectorStore/: 1-Chromadb.ipynb  2-Faiss.ipynb  3-OtherVectorStores.ipynb
4-VectorDB/: Datastax.ipynb  Pinecone.ipynb
5-AdvancedChunking/: 1-semantichunking.ipynb  2-densesparse.ipynb  demo.ipynb
5-AdvancedChunking/text_files/: python_intro.txt
