[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipynb>=0.5.1",
    "jq>=1.11.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-openai>=1.2.1",
    "matplotlib>=3.10.9",
    "msoffcrypto-tool>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "unstructured[docx]>=0.22.26",
]
